list module by technology_id and fix option seed
